JumpScript/tests/baselines/reference/compoundAdditionAssignmentWithInvalidOperands.errors.txt
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(6,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'void'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(7,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'true'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(8,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and '0'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(9,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'E.a'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(10,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and '{}'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(11,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'null'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(12,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'undefined'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(15,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'void'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(16,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'true'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(17,1): error TS2365: Operator '+=' cannot be applied to types '{}' and '0'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(18,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'E.a'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(19,1): error TS2365: Operator '+=' cannot be applied to types '{}' and '{}'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(20,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'null'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(21,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'undefined'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(24,1): error TS2365: Operator '+=' cannot be applied to types 'void' and 'void'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(25,1): error TS2365: Operator '+=' cannot be applied to types 'void' and 'true'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(26,1): error TS2365: Operator '+=' cannot be applied to types 'void' and '0'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(27,1): error TS2365: Operator '+=' cannot be applied to types 'void' and 'E.a'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(28,1): error TS2365: Operator '+=' cannot be applied to types 'void' and '{}'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(29,1): error TS2365: Operator '+=' cannot be applied to types 'void' and 'null'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(30,1): error TS2365: Operator '+=' cannot be applied to types 'void' and 'undefined'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(33,1): error TS2365: Operator '+=' cannot be applied to types 'number' and 'void'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(34,1): error TS2365: Operator '+=' cannot be applied to types 'number' and 'true'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(35,1): error TS2365: Operator '+=' cannot be applied to types 'number' and '{}'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(38,1): error TS2365: Operator '+=' cannot be applied to types 'E' and 'void'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(39,1): error TS2365: Operator '+=' cannot be applied to types 'E' and 'true'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump(40,1): error TS2365: Operator '+=' cannot be applied to types 'E' and '{}'.


==== tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentWithInvalidOperands.jump (27 errors) ====
    enum E { a, b }
    
    var a: void;
    
    var x1: boolean;
    x1 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'void'.
    x1 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'true'.
    x1 += 0;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and '0'.
    x1 += E.a;
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'E.a'.
    x1 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and '{}'.
    x1 += null;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'null'.
    x1 += undefined;
    ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'undefined'.
    
    var x2: {};
    x2 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'void'.
    x2 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'true'.
    x2 += 0;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and '0'.
    x2 += E.a;
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'E.a'.
    x2 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and '{}'.
    x2 += null;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'null'.
    x2 += undefined;
    ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'undefined'.
    
    var x3: void;
    x3 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and 'void'.
    x3 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and 'true'.
    x3 += 0;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and '0'.
    x3 += E.a;
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and 'E.a'.
    x3 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and '{}'.
    x3 += null;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and 'null'.
    x3 += undefined;
    ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and 'undefined'.
    
    var x4: number;
    x4 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'number' and 'void'.
    x4 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'number' and 'true'.
    x4 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'number' and '{}'.
    
    var x5: E;
    x5 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'E' and 'void'.
    x5 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'E' and 'true'.
    x5 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'E' and '{}'.